# Python.BSUIR_Lab2

./: .gitignore  README.md  pyproject.toml  setup.py
configs/: connector.ini  ui.ini
configs/dao/: AccountDao.json  CustomerDao.json  MessageDao.json  UserDataDao.json
src/: constants.py  main.py
src/connectors/: __init__.py  connector_base.py  json_connector.py
src/controllers/: account_controller.py  login.py  login_handler.py
src/dao/: account_dao.py  customer_dao.py  dao_base.py  message_dao.py  user_data_dao.py
src/entities/: Account.py  Entity.py  account.py  customer.py  entity.py  login.py  message.py  user_data.py
src/ui/: __init__.py  ui_controller.py
src/ui/cli/: __init__.py  cli_controller.py
src/ui/gui/: __init__.py  admin_panel.py  dao_widget.py  gui_controller.py
src/ui/gui/processor/: account_processor.py  customer_processor.py  worker_processor.py
tests/: test_Account.py  test_ConnectorBase.py  test_DaoBase.py  test_Login.py  test_UIController.py
tests/configs/: connector.ini  ui.ini
tests/configs/dao/: AccountDao.json
tests/connector/: test_ConnectorBase.py
